removed explicit external ip address 103.108.140.153